--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "react": "^0.13.0",
     "classnames": "^2.1.3",
     "bootstrap": "~3.3.5",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "react-timer-mixin": "~0.13.2"
   },
   "devDependencies": {
     "babelify": "^6.0.2",
