--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "classnames": "^2.1.3",
     "bootstrap": "~3.3.5",
     "jquery": "~2.1.4",
-    "react-timer-mixin": "~0.13.2"
+    "react-timer-mixin": "~0.13.2",
+    "r-dom": "~1.3.0",
+    "timeout-transition-group": "~1.0.3"
   },
   "devDependencies": {
     "babelify": "^6.0.2",
